--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -2,9 +2,10 @@
  * @NOTE: Prepend a `~` to css file paths that are in your node_modules
  *        See https://github.com/webpack-contrib/sass-loader#imports
  */
-@import "~font-awesome/css/font-awesome.css";
-@import "~bootstrap/scss/bootstrap.scss";
+@import '~@fortawesome/fontawesome-free/css/all.css';
+@import '~bootstrap/scss/bootstrap.scss';
 
-html, body {
-  height:100%;
+html,
+body {
+  height: 100%;
 }
