--- a/resources/extraFiles/reports/reports.css
+++ b/resources/extraFiles/reports/reports.css
@@ -1,4 +1,5 @@
 /*
+* Modified from https://pikock.github.io/bootstrap-magic/app/index.html#!/editor
 * Orson http://en.orson.io , autreplanete http://www.autreplanete.com/ 
 *  
 **/ /*!
@@ -537,7 +538,8 @@ pre code {
   max-height: 340px;
   overflow-y: scroll;
 }
-.container {
+.container,
+body {
   margin-right: auto;
   margin-left: auto;
   padding-right: 15px;
@@ -3129,7 +3131,8 @@ tbody.collapse.show {
 .navbar-dark .navbar-text {
   color: rgba(255, 255, 255, 0.5);
 }
-.card {
+.card,
+blockquote {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -3140,12 +3143,17 @@ tbody.collapse.show {
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
 }
-.card-body {
+.card-body,
+blockquote {
   flex: 1 1 auto;
   padding: 1.25rem;
 }
-.card-title {
+.card-title,
+blockquote h4 {
   margin-bottom: 0.75rem;
+}
+blockquote h4 {
+  margin-top: 0.75rem;
 }
 .card-subtitle {
   margin-top: -0.375rem;
@@ -3386,7 +3394,9 @@ tbody.collapse.show {
   border-top-right-radius: 0.2rem;
   border-bottom-right-radius: 0.2rem;
 }
-.badge {
+.badge,
+.checks-pass,
+.checks-fail {
   display: inline-block;
   padding: 0.25em 0.4em;
   font-size: 75%;
@@ -3430,7 +3440,8 @@ tbody.collapse.show {
   text-decoration: none;
   background-color: #6c757d;
 }
-.badge-success {
+.badge-success,
+.checks-pass {
   color: #fff;
   background-color: #28a745;
 }
@@ -3460,7 +3471,8 @@ tbody.collapse.show {
   text-decoration: none;
   background-color: #d39e00;
 }
-.badge-danger {
+.badge-danger,
+.checks-fail {
   color: #fff;
   background-color: #dc3545;
 }
@@ -3490,10 +3502,13 @@ tbody.collapse.show {
   text-decoration: none;
   background-color: #1d2124;
 }
-.jumbotron {
+.jumbotron,
+blockquote {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
-  background-color: #e9ecef;
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
   border-radius: 0.3rem;
 }
 @media (min-width: 576px) {
@@ -3660,7 +3675,8 @@ tbody.collapse.show {
 .media-body {
   flex: 1;
 }
-.list-group {
+.list-group,
+ul {
   display: flex;
   flex-direction: column;
   padding-left: 0;
@@ -3681,7 +3697,8 @@ tbody.collapse.show {
   color: #212529;
   background-color: #e9ecef;
 }
-.list-group-item {
+.list-group-item,
+li {
   position: relative;
   display: block;
   padding: 0.75rem 1.25rem;
@@ -3829,7 +3846,8 @@ button.list-group-item-warning.active {
   background-color: #856404;
   border-color: #856404;
 }
-.list-group-item-danger {
+.list-group-item-danger,
+li {
   color: #721c24;
   background-color: #f5c6cb;
 }
