--- a/app/components/SubmitHelpTicket/index.css
+++ b/app/components/SubmitHelpTicket/index.css
@@ -11,3 +11,12 @@
   width: 100%;
   height: 500px;
 }
+
+.mdeditor .editor-wrap .full {
+  width: 100%;
+  height: 100% !important;
+  position: fixed;
+  left: 0;
+  top: 230px;
+  z-index: 1000;
+}
